--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         </div>
         <button id="reset-btn">Reset Game</button>
     </main>
-    
+    <script src="tictac.js"></script>
 </body>
 </html>
